# GameBot

./: CMakeLists.txt  MainForm.ui.qml  README.md  botprogram.cpp  botprogram.h  cocbattlefield.cpp  cocbattlefield.h  levelme_coc.pro  main.cpp  main.qml
CookieRun/: BUILD  CMakeLists.txt  README.md  cookie_player.cpp  delay.py  interact.cpp  reader.cpp  recorder.py  simple_player.cpp  stream_reader.cpp
CookieRun/csvpp/: csvpp.cpp  stringhelper.cpp
CookieRun/include/: common.h  csvpp.h  interact.h  reader.h  stringhelper.h
CookieRun/recorder/: README.md  screencap_2.cpp  sockserv.cpp  sockserv.hpp
cutouts/: cutouts.qrc
qml/: DamageArea.qml  Defense.qml  GreyMaskThreshold.qml  MainForm.ui.qml  MatchBox.qml  images.qrc  main.qml  qml.qrc
scripts/: learning_CoC.py  play.py
src/: botprogram.cpp  botprogram.h  cocbattlefield.cpp  cocbattlefield.h  cutouts.cpp  cutouts.h  detection.cpp  detection.h  objects.h  resourcemanager.cpp  resourcemanager.h
